# digital-twin-desktop

./: .cursorrules  .dockerignore  .env.development  .env.local.example  .env.production  .env.test  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  CRITICAL-FIXES-SUMMARY.md  Cargo.toml  Dockerfile  QUICK-START-TESTING.md  README.md  TEST-COMPATIBILITY-ISSUES.md  TEST-EXECUTION-PLAN.md  TEST-FIXES-APPLIED.md  TEST-FIXES-REQUIRED.md  TEST-REVIEW.md  TESTING-CHECKLIST.md  docker-compose.yml  tauri.conf.json
.cursorprompts/: agent-patterns.md  architecture.md  testing-guidelines.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
config/: system_prompt.txt
docs/: agent-design.md  architecture.md  configuration.md  deployment.md  digital-twin-guide.md  tool-development.md
docs/api/: README.md  agent.md  conversation.md  simulation.md  tool.md  twin.md
scripts/: build.sh  dev.sh  pre-test-check.sh  setup.sh  test.sh
src/: lib.rs  main.rs
src/api/: dto.rs  error.rs  mod.rs
src/api/commands/: agent_commands.rs  conversation_commands.rs  mod.rs  simulation_commands.rs  (+2 more)
src/core/: mod.rs
src/infrastructure/: config.rs  logging.rs  mod.rs  security.rs
tests/: mod.rs
tests/common/: mod.rs
tests/e2e/: mod.rs
tests/fixtures/: mod.rs
tests/helpers/: mod.rs
tests/integration/: mod.rs
tests/mocks/: mod.rs
tests/unit/: mod.rs
ui/: cypress.config.js  index.html  package-lock.json  package.json  vite.config.ts
ui/cypress/: README.md
ui/src/: App.css  App.tsx  main.tsx  styles.css
(+124 files in other folders)
